--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a href="#contact">Contact</a>
             </li>
             <li>
-              <button class="btn blue darken-3">Order Now</button>
+              <button class="btn orange black-text">Order Now</button>
             </li>
           </ul>
         </div>
@@ -68,39 +68,39 @@
       <li>
         <img src="img/water1.jpg"> <!-- random image -->
         <div class="caption left-align">
-          <h2 class="blue-text text-darken-3 white-background">Kangen water is anti-oxidant</h2>
-          <h5 class="light blue-text text-darken-3 hide-on-small-only white-background">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae asperiores explicabo officiis possimus ipsa minima nam cumque iure molestiae aut!</h5>
+          <h2 class="white-text text-darken-3 sh">Kangen water is anti-oxidant</h2>
+          <span class="flow-text light white-text text-darken-3 hide-on-small-only bg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae asperiores explicabo officiis possimus ipsa minima nam cumque iure molestiae aut!</span>
         </div>
       </li>
       <li>
         <img src="img/water2.jpg"> <!-- random image -->
-        <div class="caption right-align">
-          <h2 class="blue-text text-darken-3 white-background">Kangen water is alkaline</h2>
-          <h5 class="light blue-text text-darken-3 hide-on-small-only white-background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ea adipisci illum nisi mollitia quidem voluptate doloribus amet eligendi cum.</h5>
+        <div class="caption left-align">
+          <h2 class="white-text text-darken-3 sh">Kangen water is alkaline</h2>
+          <span class="flow-text light white-text text-darken-3 hide-on-small-only bg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae asperiores explicabo officiis possimus ipsa minima nam cumque iure molestiae aut!</span>
         </div>
       </li>
       <li>
         <img src="img/water3.jpg"> <!-- random image -->
-        <div class="caption center-align">
-          <h2 class="blue-text text-darken-3 white-background">Kangen water is micro-clustered</h2>
-          <h5 class="light blue-text text-darken-3 hide-on-small-only white-background">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio et totam dolores quisquam sunt dolorum laborum excepturi beatae aperiam soluta!</h5>
+        <div class="caption left-align">
+          <h2 class="white-text text-darken-3 sh">Kangen water is micro-something</h2>
+          <span class="flow-text light white-text text-darken-3 hide-on-small-only bg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae asperiores explicabo officiis possimus ipsa minima nam cumque iure molestiae aut!</span>
         </div>
       </li>
       <li>
         <img src="img/water4.jpg"> <!-- random image -->
-        <div class="caption right-align">
-          <h2 class="blue-text text-darken-3 white-background">Kangen water is healthy</h2>
-          <h5 class="light blue-text text-darken-3 hide-on-small-only white-background">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio et totam dolores quisquam sunt dolorum laborum excepturi beatae aperiam soluta!</h5>
+        <div class="caption left-align">
+          <h2 class="white-text text-darken-3 sh">Kangen water is healthy</h2>
+          <span class="flow-text light white-text text-darken-3 hide-on-small-only bg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae asperiores explicabo officiis possimus ipsa minima nam cumque iure molestiae aut!</span>
         </div>
       </li>
     </ul>
   </section>
 
   <!-- Section: About Kangen -->
-  <section id="kangen" class="section section-kangen grey lighten-4 center scrollspy">
+  <section id="kangen" class="section section-kangen blue center scrollspy pad-top-3 pad-bot-3">
     <div class="container">
       <div class="row">
-        <h4 class="center">What is <span class="blue-text">Kangen</span> Water</h4>
+        <h4 class="center white-text">What is Kangen Water?</h4>
         <div class="col s12 m4">
           <div class="card-panel">
             <i class="fas fa-tint fa-4x purple-text"></i>
@@ -127,7 +127,7 @@
   </section>
 
   <!-- Section: About us-->
-  <section id="about" class="section section-about scrollspy">
+  <section id="about" class="section section-about scrollspy pad-top-3 pad-top-3 pad-bot-3">
     <div class="container">
       <div class="row">
         <h4 class="center"><span class="blue-text">About</span> Us</h4>
@@ -169,7 +169,7 @@
   </section>
 
   <!-- Section: Follow -->
-  <section class="section section-follow blue darken-2 white-text center">
+  <section class="section section-follow blue darken-2 white-text center pad-top-3 pad-bot-3">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -196,7 +196,7 @@
   </section>
 
   <!-- Section: Contact -->
-  <section id="contact" class="section section-contact scrollspy">
+  <section id="contact" class="section section-contact scrollspy pat-top-3 pad-bot-3">
     <div class="container">
       <div class="row">
         <div class="col s12 m6">
@@ -239,7 +239,7 @@
   </section>
 
   <!-- Section: Footer -->
-  <footer class="section blue darken-2 white-text center">
+  <footer class="section blue darken-2 white-text center pad-top-3 pad-bot-3">
     <p class="flow-text">Kangen Water &copy; 2018</p>
   </footer>
 
