--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kangen Water</title>
+  <title>Kangen</title>
 </head>
 
 <body id="home" class="scrollspy">
